--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,8 @@
 html {
   scroll-behavior: smooth;  
   overflow-x: hidden;
+  display: flex;
+  flex-grow: 1;
 }
 body {
     margin: 0;
